# OOGL

./: CMakeLists.txt  Makefile
include/GL/GL/: Context.hpp  Extensions.hpp  Shader.hpp  StorageBuffer.hpp  Texture.hpp  VertexArray.hpp
include/GL/Math/: Vec3.hpp
include/GL/Util/: Image.hpp  Mesh.hpp
include/GL/Window/: Window.hpp
src/GL/GL/: Context.cpp  Context_Win32.cpp  Extensions.cpp  StorageBuffer.cpp  Texture.cpp  VertexArray.cpp
src/GL/Math/: Vec3.cpp
src/GL/Util/: Image.cpp
src/GL/Window/: Window_Win32.cpp
